Fixed footer styling to remove whitespace.

--- a/client/cardinalrides.css
+++ b/client/cardinalrides.css
@@ -230,8 +230,12 @@ span.help {
     background-color: #f7f7f7;
     color:#888;
     text-align:right;
-    width:90%;
     padding: 20px 0px;
+  }
+  .footer-container {
+        width:90%;
+        margin-left: auto;
+        margin-right: auto;
   }
   #submit {
     background-color: rgba(153,0,0,.1);
